# claude-container

./: .env.example  .gitignore  Containerfile  README.md  SPEC.md  aliases.sh  docker-compose.yaml  docker-compose.yml  image-name.sh  podman-compose.yaml  pyproject.toml  run-with-proxy.sh  run.sh  start.sh
catalog/: index.json
catalog/cargo/: tool.json
catalog/curl/: tool.json
catalog/go/: tool.json
catalog/jq/: tool.json
catalog/make/: tool.json
catalog/node/: tool.json
catalog/npm/: restricted.sh  setup.sh  tool.json
catalog/python/: tool.json
claude/: Containerfile  entrypoint.sh
cli/: agent-status  cli-wrapper  curl  gh  git  plugin-client
client/: tool-client
command-agent/: Containerfile  server.py
config/: git.yaml
credential-agent/: Containerfile  policy.yaml  server.py
docs/: docker-bind-mounts-exploration.md
examples/.claude-container/: setup.sh
examples/add-npm/: README.md
examples/npm-tool/: README.md  restricted.sh  tool.json
examples/project-setup/: README.md  config.json
plugins/: README.md
plugins/base/: __init__.py  protocol.py  security.py  server.py
plugins/cli/: Containerfile  __init__.py  server.py  tool-caller.py  tool-setup.sh
plugins/git/: Containerfile  __init__.py  main.py  (+1 more)
proxy/: Containerfile  config.py  config.yaml  requirements.txt  server.py
proxy-cli/: cred-cli  proxy-cli  proxy-github  proxy-tools  secure-git  secure-github
scripts/: check-instances.sh  install.sh  run.sh
tool-server/: Containerfile  __init__.py  server.py  tool-caller.py  tool-setup.sh
v2/: README.md  SPEC.md
(+13 files in other folders)
