[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-container"
version = "0.1.0"
description = "Run Claude Code in a sandboxed container with controlled tool access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["claude", "ai", "container", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

[project.scripts]
claude-container = "claude_container.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_container"]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "claude_container/data/scripts"
"client" = "claude_container/data/client"
"claude" = "claude_container/data/claude"
"tool-server" = "claude_container/data/tool-server"
"tools.d" = "claude_container/data/tools.d"
"catalog" = "claude_container/data/catalog"
"podman-compose.yaml" = "claude_container/data/podman-compose.yaml"
